--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,20 @@ main {
   flex: 1;
 }
 
+.image-gallery {
+  width: 40%;
+  height: auto;
+  margin-left: 350px;
+}
+
+.image-gallery-slide img {
+  width: 100px;
+  height: auto;
+  max-height: 100px;
+  object-fit: cover;
+  overflow: hidden;
+}
+
 /*
 .btnproduct {
   position: absolute;
@@ -45,9 +59,23 @@ main {
   text-shadow: 0 1px 1px #fff;
 }
 
+.cataloglink {
+  text-align: center;
+  color: #4c025f;
+  font-size: 15px;
+}
+
 .para {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: large;
 }
+
+.paraImage {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: large;
+  text-align: center;
+}
+
 
 .homeh3 {
   font-family: 'Brush Script MT', cursive;
@@ -89,6 +117,20 @@ main {
   margin-right: 25px;
   width: 300px;
 }
+
+.img1 {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+
+}
+
+.card-img-top-home1 {
+  height: 120px;
+  object-fit: contain;
+  width: 1000px;
+}
+
 
 .btn-primary {
   background-color: #f0c040;
