--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,6 +29,16 @@ main {
   overflow: hidden;
 }
 
+.select-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.select-row:last-of-type {
+  margin-bottom: 0;
+}
+
 /*
 .btnproduct {
   position: absolute;
@@ -97,6 +107,7 @@ main {
   object-fit: cover;
 }
 
+
 .card-body {
   display: flex;
   flex-wrap: wrap;
@@ -120,6 +131,13 @@ main {
   object-fit: contain;
   margin-right: 25px;
   width: 300px;
+}
+
+.card-img-top-tips {
+  height: 80px;
+  object-fit: contain;
+  margin-right: 20px;
+  width: 200px;
 }
 
 .img1 {
